# GB_Python_Patterns

./: LICENSE  README.md  create_db.py  log.txt  patterns.sqlite  pyproject.toml  requirements.txt  run.py  test_uwsgi.py
my_framework/: app.py  exceptions.py  http_controller.py  http_utils.py  middleware_controller.py  middlewares.py  static_controller.py  statics.py  template_engine.py  templates.py  view_controller.py  views.py
my_simple_app/: app.py  middleware.py  middlewares.py  views.py
my_simple_app/core/: common.py  controllers.py  db.py  db_mappers.py  exceptions.py  logger.py  models.py  notifiers.py  views.py
my_simple_app/statics/: style.css
my_simple_app/templates/: __footer.html  __logo.html  __menu.html  __sidebar.html  _base.html  _redirect.html  categories_add.html  categories_list.html  contacts.html  courses_add.html  courses_edit_offline.html  courses_edit_online.html  courses_list.html  index.html  students_add.html  students_add_course.html  students_list.html
