[tool.poetry]
name = "gb-python-patterns"
version = "0.1.0"
description = ""
authors = ["Ivan St <ivanstgit>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gb_python_patterns"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
